--- a/slovenia.html
+++ b/slovenia.html
@@ -117,7 +117,7 @@
           <a href="slovenia.html">Slovenia</a>
         </p>
 
-        <p>Orkux &copy; 2017</p>
+        <p>Kyle &copy; 2018</p>
       </div>
 
     </footer>
